--- a/{{ cookiecutter.package_name }}/pytest.ini
+++ b/{{ cookiecutter.package_name }}/pytest.ini
@@ -6,14 +6,14 @@ addopts =
     -r sxX
     --show-capture=log
 
-cache_dir = .cache
+cache_dir = .cache/pytest
 
 log_level = DEBUG
 log_format = %(relpath)s:%(lineno)-4d %(levelname)5s: %(message)s
 
 [pytest-watch]
 
-ignore =.cache
+ignore = .cache
 
 runner = pytest --failed-first --maxfail=1 --disable-warnings
 
