--- a/{{ cookiecutter.package_name }}/Cargo.toml
+++ b/{{ cookiecutter.package_name }}/Cargo.toml
@@ -1,5 +1,15 @@
-[workspace]
+[package]
+name = "{{ cookiecutter.package_name }}"
+version = "0.1.0"
+edition = "2021"
 
-members = [
-    "src/rust"
-]
+[lib]
+name = "_{{ cookiecutter.package_name }}"
+path = "src/rust/lib.rs"
+crate-type = ["cdylib"]
+
+[dependencies]
+pyo3 = { version = "0.19.0", features = ["extension-module"] }
+
+[profile.release]
+incremental = true
